FreedomSanboxAntDeploy/src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>All_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Meeting Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Place__c</fullName>
        <label>Meeting Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Time__c</fullName>
        <description>This is the time field</description>
        <label>From Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date__c</fullName>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Time__c</fullName>
        <label>To Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Conveyance Submission</label>
    <nameField>
        <label>Event  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conveyance Submission</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>